@@ -25,10 +25,12 @@ public class SocketClientSide extends IMySocket {
 
     private ExecutorService executorService;
 
+    private final int NUMERO_THREADS = 2;
+
     public SocketClientSide(String endereco, int porta) {
         super(endereco, porta);
         this.entrada_saida = new SocketIO();
-        this.executorService = Executors.newVirtualThreadPerTaskExecutor();
+        this.executorService = Executors.newFixedThreadPool(NUMERO_THREADS);
         this.socket = new Socket();
     }
 
@@ -36,7 +38,7 @@ public class SocketClientSide extends IMySocket {
         super(socket.getLocalAddress().toString(), socket.getPort());
         this.socket = socket;
         this.entrada_saida = new SocketIO();
-        this.executorService = Executors.newVirtualThreadPerTaskExecutor();
+        this.executorService = Executors.newFixedThreadPool(NUMERO_THREADS);
     }
 
     public void conectar() {
@@ -48,7 +50,7 @@ public class SocketClientSide extends IMySocket {
             System.out.println("ERRO NA CONEXÃO: " + e.getMessage());
         }
     }
-
+    
     public void configurarMetodoEscutar(ISocketListenFunction metodo_escutar){ this.metodo_escutar = metodo_escutar; }
 
     public void configurarMetodoEnviar(ISocketWriteFunction metodo_enviar){ this.metodo_enviar = metodo_enviar; }
@@ -81,11 +83,7 @@ public class SocketClientSide extends IMySocket {
     }
 
     public void enviarMensagem(String msg){
-        if(this.entrada_saida.enviar(msg)){
-            System.out.println("enviado");
-        } else {
-            System.out.println("ERRO no envio da msg: " + msg);
-        }
+        this.entrada_saida.enviar(msg);
     }
 
     public String receberMensagem(){
@@ -97,25 +95,19 @@ public class SocketClientSide extends IMySocket {
     }
 
     public Object receberObjeto(){
-        return this.entrada_saida.receberObjeto();
+        if(this.entrada_saida != null) return this.entrada_saida.receberObjeto();
+        else return null;
     }
 
     public void enviar(){
         if(this.metodo_enviar != null){
-            new Thread(
+            this.executorService.execute(
                 () -> {
                     while (true) {
                         this.metodo_enviar.enviar();
                     }
                 }
-            ).start();
-            // this.executorService.submit(
-            //     () -> {
-            //         while (true) {
-            //             this.metodo_enviar.enviar();
-            //         }
-            //     }
-            // );
+            );
         } else {
             System.out.println("ERRO: MÉTODO DO TIPO [ISocketWriteFunction] NÃO CONFIGURADO!");
         }
@@ -123,20 +115,13 @@ public class SocketClientSide extends IMySocket {
 
     public void escutar(){
         if(this.metodo_escutar != null){
-            new Thread(
+            this.executorService.execute(
                 () -> {
                     while (true) {
                         this.metodo_escutar.escutar();
                     }
                 }
-            ).start();
-            // this.executorService.submit(
-            //     () -> {
-            //         while (true) {
-            //             this.metodo_escutar.escutar();
-            //         }
-            //     }
-            // );
+            );
         } else {
             System.out.println("ERRO: MÉTODO DO TIPO [ISocketListenFunction] NÃO CONFIGURADO!");
         }
@@ -144,8 +129,8 @@ public class SocketClientSide extends IMySocket {
 
     public void fechar(){
         try {
+            this.executorService.shutdown();
             this.entrada_saida.fechar();
-            this.executorService.close();
             this.socket.close();
         } catch (IOException e) {
             e.printStackTrace();
